docs: add authHandler docs
